# mlflow-rhoai-demo

./: .dockerignore  .env.example  .gitignore  2026-03-25-a-platform-for-managing-the-lifecycle-of-predict.md  2026-03-25-a-summary-of-mlflow-and-a-basic-python.md  2026-03-25-tool-test-20260325234343.md  2026-03-26-a-brief-explanation-of-mlflow-an-open-source.md  2026-03-26-a-brief-introduction-to-mlflow-an-open-source.md  2026-03-26-mlflow-is-an-open-source-platform-for-managing-2.md  2026-03-26-mlflow-is-an-open-source-platform-for-managing.md  2026-03-26-red-hat-openshift-ai-is-a-platform-for.md  2026-03-27-a-brief-overview-of-mlflow-an-open-source.md  2026-03-30-mlflow-is-an-open-source-platform-designed-to.md  2026-04-08-a-brief-overview-of-mlflow-an-open-source.md  2026-04-09-a-note-summarizing-mlflow-as-an-open-source.md  2026-04-09-mlflow-is-an-open-source-platform-for-managing.md  Containerfile  Containerfile.backend  README.md  langgraph.json  pyproject.toml
manifests/: deployment.yaml  kustomization.yaml  route.yaml  service.yaml  serviceaccount.yaml  workspace-rbac.yaml
mlflow_notes_agent/: __init__.py  __main__.py  _serve.py  agent.py  config.py  github_notes.py  judges.py  tools.py  tracing.py  webapp.py
ui/: .env.local.example  package-lock.json  package.json
ui/app/: assistant.tsx  globals.css  layout.tsx  page.tsx
ui/app/api/langgraph/[[...path]]/: route.ts
ui/components/assistant-ui/: markdown-text.tsx  thread.tsx  tool-fallback.tsx  tooltip-icon-button.tsx
ui/components/ui/: button.tsx  collapsible.tsx  tooltip.tsx
ui/lib/: chatApi.ts
