[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlflow-notes-agent"
version = "0.1.0"
description = "MLflow-traced LangGraph note assistant demo for Red Hat OpenShift AI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs",
    "fastapi",
    "httpx",
    "kubernetes",
    "langchain",
    "langchain-google-genai",
    "langgraph",
    "litellm",
    "mlflow @ git+https://github.com/mlflow/mlflow@7ff7c1ec4b1400b6563aee2dee5bc37e788493c9",
    "python-dotenv",
]

[project.scripts]
mlflow-notes-agent = "mlflow_notes_agent.__main__:main"
mlflow-notes-agent-serve = "mlflow_notes_agent._serve:main"
mlflow-notes-agent-judge = "mlflow_notes_agent.judges:main"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]",
    "ruff",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "SIM",
    "UP",
]

[tool.hatch.metadata]
allow-direct-references = true
